fix mobile menu gap

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -63,9 +63,9 @@
 }
 
 #header-desktop {
-  line-height: unset;
+  line-height: 0rem;
 }
 
 #header-mobile {
-    line-height: unset;
+    line-height: 0rem;
 }
